Noch ein Absatz Zadok

--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -27,4 +27,13 @@ Aber 's gab keinen wie Käpt'n Obed, den alten Satansbraten! Hehe! Ich kann ihm 
 Matt Eliot, sein erster Maat hat auch viel erzählt, aber er war dageg'n, dass die Leut' irgendwelchen Heidenkram tun! Hat von 'ner Insel östlich von Otaheite erzählt, wo's viele steinerne Ruinen gab', älter als ir'ndwer 's hätte sag'n können, so ähnlich wie die auf Ponape in den Karolinen aber mit Schnitzerei'n von Gesichtern wie die groß'n Statuen auf der Osterinsel. Da war auch 'ne kleine Vulkaninsel in der Nähe mit anderen Schnitzereien --- Ruinen abgeschliffen als wär'n sie einmal unter'm Meer gewesen un' mit Bildern von furchtbar'n Monstern überall.
 
 Also, Matt sagte die Eingebor'nen da hätten all den Fisch gehabt, den sie fangen konnt'n und hatten' Armbänder un' Armreife un' Kopfschmuck aus 'nem seltsamen Gold und voll mit Bildern von Monstern genau wie die in die Ruinen auf der kleinen Insel gehauen waren --- ir'ndwie Fischfrösche oder Froschfische in allen möglichen Position'n als wär'n's Menschen. Keiner hat aus denen rausbekommen wo die all das Zeug herhatten un' all die ander'n Eingeborenen ha'n sich gefragt, wie die soviel Fisch finden konnten, wenn schon die nächste Insel magere Fänge hatte. Matt hat sich das auch gefragt un' auch Käpt'n Obed. Obed hat auch bemerkt, dass viele von den schönen, jungen Leuten auf Nimmerwiederseh'n verschwanden Jahr für Jahr un' dass 's da nich viele Alte gab. Außerdem, dachte er, sah'n manche von den Menschen verdammt merkwürdig aus, sogar für Kanaken.
-\grqq
+
+'s brauchte schon Obed um die Wahrheit aus den Ungläub'gen rauszukrieg'n. Ich weiß nich' wie aber er hat Handel für die Gold-Dinger, die die getragen haben angefangen. Hat gefragt wo die herkamen un' ob sie mehr davon beschaffen könn'n un' hat schließlich die ganze Geschichte aus dem alten Häuptling --- Walakea wurde der genannt. Niemand außer Obed hätte dem alten Teufel je geglaubt, aber der Käpt'n konnte die Leute lesen wie Bücher. Hehe! Mir glaubt niemand wenn ich das ihnen erzähl' un' Du wahrscheinlich auch nicht, Junge --- obwohl, wenn ich dich so anseh, Du hast genauso scharfe Augen wie der alte Obed sie hatte.\grqq
+
+Das Geflüster des alten Mannes wurde schwächer und ich fand mich selbst erzitternd ob der fürchterlichen und aufrichtigen Ungeheuerlichkeit seines Tonfalls, obwohl ich wusste, dass seine Erzählung nichts als trunkene Phantasie sein kann.
+
+\glqq Nun, mein Herr, Obed lernte, dass es da Dinge auf dieser Erde gibt, von denen die meist'n Leute nie gehört ha'n --- un' die sie nicht glauben wür'n wenn sie sie hörten. Anscheinend haben diese Kanaken haufenweise ihre jungen Männer und Frau'n geopfert an irgendso 'ne Art Götterwesen die unter'm Meer lebten und ha'n alle möglichen Gefälligkeiten dafür bekommen. Sie haben die Wesen auf der kleinen Insel mit den selstam'n Ruinen getroffen un' anscheinend sollten die furch'baren Bilder von Froschfischmosntern Bilder von denen sein. Vielleicht war'n das die Viecher von denen all die Meerjungfrau'ngeschichten und so weiter entsprungen sind. Die hatten jede Menge Städte am Meeresgrund un' diese Insel war von dort abgehob'n. Anscheinend lebten ein'ge von den Dingern in den Steinbauten als die Insel sich plötzlich an die Oberfläche erhob. So ha'n die Kanaken Wind davon bekommen, dass sie da unten war'n. Hab'n mit Zeichensprache 'n Handel ausgemacht, sobald sie ihre Angst überkomm'n hatten.
+
+Die Dinger mochten Mensch'nopfer! Hatten sie vor Urzeiten, aber ha'n die Oberwelt aus'n Augen verlor'n nach ein'ger Zeit. Was sie den Opfern angetan ha'n kann ich nich sagen un' ich glaub' Obed war nich allzu scharf drauf zu fragen. Aber die Heiden war'n einverstanden, weil sie 'ne harte Zeit gehabt hatten und generell verzweifelt war'n. Sie haben zweimal im Jahr den Seedingern eine bestimmte Zahl junge Menschen übergeben --- am Vorabend zum Mai und zu Halloween --- ganz regelmäßig. Ha'n außerdem was von dem geschnitzten Krimskrams, den sie hergestellt haben übergeb'n. Im Ge'nzug ha'n die Dinger jede Menge Fisch geliefert --- ha'n die von überall im Meer herbeigetrieben --- un' hier un' da gab's auch so 'n paar von den goldartigen Dingern.
+
+Nun, wie gesagt, ha'n die Eingebor'nen die Dinger auf der kleinen Vulkaninsel getroffen --- sind in Kanus hin mit Opfern un'soweiter un' brachten von da welche von den goldigen Juwel'n wenn's welche gab. Zuerst sind die Viecher nich' auf die Hauptinsel, aber nach 'ner Weile wollten sie dann doch. Scheint als wär' den'n danach gewesen, sich unter die Mensch'n zu mischen un' zusammen Zeremonien an den großen Tagen abhalten --- Maiabend und Hallowe'en. Schau ma', die konnten sowohl im als auch über'm Wasser leben --- nennt man Amphibien, glaub' ich. Die Kanaken haben den' erzählt, dass die anderen Inselvölker sie ausrotten wollen, wenn sie Wind bekommen, dass die hier sind aber die meinten nur, das kümmere sie nich', weil sie die ganze Menschenbrut ausrott'n könnt'n, wenn sie sich die Mühe machen wollten --- das heißt, alle, die nich' bestimmte Zeichen kennen, wie sie einst von den verlor'n'n Großen Alten benutzt wur'n, wer immer die auch war'n. Aber weil sie da keine Lust drauf hatt'n, ha'n sie sich bedeckt gehalt'n wenn ir'ndwer die Insel besucht hat.
