Noch mehr Zadok

--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -27,4 +27,12 @@ Aber 's gab keinen wie Käpt'n Obed, den alten Satansbraten! Hehe! Ich kann ihm 
 Matt Eliot, sein erster Maat hat auch viel erzählt, aber er war dageg'n, dass die Leut' irgendwelchen Heidenkram tun! Hat von 'ner Insel östlich von Otaheite erzählt, wo's viele steinerne Ruinen gab', älter als ir'ndwer 's hätte sag'n können, so ähnlich wie die auf Ponape in den Karolinen aber mit Schnitzerei'n von Gesichtern wie die groß'n Statuen auf der Osterinsel. Da war auch 'ne kleine Vulkaninsel in der Nähe mit anderen Schnitzereien --- Ruinen abgeschliffen als wär'n sie einmal unter'm Meer gewesen un' mit Bildern von furchtbar'n Monstern überall.
 
 Also, Matt sagte die Eingebor'nen da hätten all den Fisch gehabt, den sie fangen konnt'n und hatten' Armbänder un' Armreife un' Kopfschmuck aus 'nem seltsamen Gold und voll mit Bildern von Monstern genau wie die in die Ruinen auf der kleinen Insel gehauen waren --- ir'ndwie Fischfrösche oder Froschfische in allen möglichen Position'n als wär'n's Menschen. Keiner hat aus denen rausbekommen wo die all das Zeug herhatten un' all die ander'n Eingeborenen ha'n sich gefragt, wie die soviel Fisch finden konnten, wenn schon die nächste Insel magere Fänge hatte. Matt hat sich das auch gefragt un' auch Käpt'n Obed. Obed hat auch bemerkt, dass viele von den schönen, jungen Leuten auf Nimmerwiederseh'n verschwanden Jahr für Jahr un' dass 's da nich viele Alte gab. Außerdem, dachte er, sah'n manche von den Menschen verdammt merkwürdig aus, sogar für Kanaken.
+
+Als es darum ging, sich mit den froschig'n Fischen zu paaren, ha'n die Kanaken sich erst mal gescheut aber letztendlich was gelernt, das dem Ganzen ein neues Gesicht gab'. Scheint, dass Menschen eine Art von Verwandtschaft mit diesen Wasserviechern hab'n.--- dass alles lebendige ursprünglich mal aus'm Wasser kam un' nur ein paar Veränderungen braucht um wieder zurück zu könn'n. Die Dinger ha'n den Kanaken erzählt, dass wenn sie ihre Blutlinien misch'n, das Kinder brächte, die erst menschlich aussehen aber später mehr un' mehr wie die Dinger wer'n, bis 's sie letz'en'lich zum Wasser zieht un' sie zum Rest der Viecher da unt'n stoßen. Un' das hier iss der wichtige Teil mein Jung' --- die, die zu Fischviechern wurd'n un' ins Wasser gingen, sterben niemals. Die Dinger sterben nie, außer durch Gewalt.
+
+Nun, mein Herr, scheint als ob zu der Zeit als Obed die Inselbewohner kenn'lernte, die schon voll mit Fischblut von den Tiefwasserdingern waren. Wenn sie alt wurd'n un' sich das zeigte, wur'n sie versteckt bis es sie zum Wasser hin un' vom Land weg zog. Ein'ge war'n stärker davon berührt als and're un' manche hab'n sich nie genug verändert, dass es die zum Wasser zog, aber größtenteils hat sich das genauso gefügt wie die Dinger gesagt hatt'n. Die, die stärker wie die Viecher geboren war'n veränderten sich früher aber die, die fast wie Menschen aussahen, blieben manchmal bis sie über siebzig war'n an Land, obwohl die schon davor öfters auf Probeausflüge runter gingen. Leute, die's zum Wasser gezog'n hatte, kamen generell oft zurück zu Besuch, so dass ein'ge mit ihr'n eig'n fünffach'n Urgroßvätern sprach'n, die das trock'ne Land vor'n paarhundert Jahr'n verlassen hatt'n.
+
+Alle hatten die Idee vom Sterb'n aufgege'n --- außer in Kanu-Krieg'n mit den an'ern Inselbewohnern oder als Opfer an die Meeresgötter tief unt'n oder durch Schlangenbisse, Pest oder gallopierende Krankheit oder ir'ndwas, bevor's sie ins Wasser zog --- sondern erwarteten alle die Veränd'rung, die nach 'ner Weile kein bissl schrecklich mehr war. Sie dachten, was sie draus zog'n war alles wert, was sie dafür aufgege'n hatt'n --- un' ich denk' Obed hat sich das so ähnlich überlegt, als er so über Walakeas Geschichte nachgedacht hat. Aber Walakea gehörte zu den wenig'n die nix von dem Fischblut in sich hatten --- kam aus einer Adelslinie, die sich mit Adelslinien von anderen Inseln verheiratete.
+
+Walakea zeigte Obed eine Menge Riten un' Beschwörungen die mit den Seeviechern zu tun hatten un' hat ihm ein'ge von den Leut'n gezeigt, die sich stark von ihrer Menschenform verändert hatt'n. Irgendwie, obwohl er ihn nie eins von den normalen Dingern aus'm Wasser seh'n ließ. Am Ende gab' er ihm 'n merkwürdiges Dingsbums aus Blei oder so, dass so sagte er, die Fischdinger hervorbringen würde, von je'm Ort im Wasser, wo's ein Nest von denen gäb'. Die Idee war, das zusammen mit den richti'en Gebet'n un' so herabzuwerfen. Walakea erlaubte das, da die Dinger über die ganze Welt verstreut war'n un' jeder, der danach suchte, ein Nest finden konnte un' die herbeirufen könnte, wenn er sie brauchte. 
 \grqq
