Mühsam ernährt sich das Amphibienhörnchen

--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -44,6 +44,10 @@ Nun, mein Herr, scheint als ob zu der Zeit als Obed die Inselbewohner kenn'lernt
 
 Alle hatten die Idee vom Sterb'n aufgege'n --- außer in Kanu-Krieg'n mit den an'ern Inselbewohnern oder als Opfer an die Meeresgötter tief unt'n oder durch Schlangenbisse, Pest oder gallopierende Krankheit oder ir'ndwas, bevor's sie ins Wasser zog --- sondern erwarteten alle die Veränd'rung, die nach 'ner Weile kein bissl schrecklich mehr war. Sie dachten, was sie draus zog'n war alles wert, was sie dafür aufgege'n hatt'n --- un' ich denk' Obed hat sich das so ähnlich überlegt, als er so über Walakeas Geschichte nachgedacht hat. Aber Walakea gehörte zu den wenig'n die nix von dem Fischblut in sich hatten --- kam aus einer Adelslinie, die sich mit Adelslinien von anderen Inseln verheiratete.
 
-Walakea zeigte Obed eine Menge Riten un' Beschwörungen die mit den Seeviechern zu tun hatten un' hat ihm ein'ge von den Leut'n gezeigt, die sich stark von ihrer Menschenform verändert hatt'n. Irgendwie, obwohl er ihn nie eins von den normalen Dingern aus'm Wasser seh'n ließ. Am Ende gab' er ihm 'n merkwürdiges Dingsbums aus Blei oder so, dass so sagte er, die Fischdinger hervorbringen würde, von je'm Ort im Wasser, wo's ein Nest von denen gäb'. Die Idee war, das zusammen mit den richti'en Gebet'n un' so herabzuwerfen. Walakea erlaubte das, da die Dinger über die ganze Welt verstreut war'n un' jeder, der danach suchte, ein Nest finden konnte un' die herbeirufen könnte, wenn er sie brauchte. 
+Walakea zeigte Obed eine Menge Riten un' Beschwörungen die mit den Seeviechern zu tun hatten un' hat ihm ein'ge von den Leut'n gezeigt, die sich stark von ihrer Menschenform verändert hatt'n. Irgendwie, obwohl er ihn nie eins von den normalen Dingern aus'm Wasser seh'n ließ. Am Ende gab' er ihm 'n merkwürdiges Dingsbums aus Blei oder so, dass so sagte er, die Fischdinger hervorbringen würde, von je'm Ort im Wasser, wo's ein Nest von denen gäb'. Die Idee war, das zusammen mit den richti'en Gebet'n un' so herabzuwerfen. Walakea erlaubte das, da die Dinger über die ganze Welt verstreut war'n un' jeder, der danach suchte, ein Nest finden konnte un' die herbeirufen könnte, wenn er sie brauchte.
+
+Matt mochte dieses Treiben überhaupt nich' un' wollte, dass Obed sich von der Insel fernhielt, doch der Käp'n war scharf auf Profit un' fand raus, dass er die Golddinger für'n Spottpreis bekommen konnte, so dass es sich lohn'n würde, sich darauf zu spezialisier'n. Die Dinge liefen so für Jahre un' Obed bekam genug von dem Goldzeug, dass er die Raffinerie in Waite's alter, verkommener Walkmühle aufmachen konnte. Er hat's nie gewagt, die Stücke zu verkaufen wie sie war'n, weil die Leute sonst ständig Fragen stell'n würd'n. So oder so kamen seine Matrosen manchmal an so'n Stück un' wur'n das hie un' da los, obwohl sie geschwor'n hatten, Ruhe zu halten. Un' er hat die Frau'n in seiner Familie 'n paar von den Stücken, die für  Menschen passender aussah'n als die meisten, tragen lassen.
+
+Un' dann, ungefähr Achtun'dreißig als ich sieben war --- fand Obed das ganze Inselvolk von einer Reise auf die nächste ausgelöscht. Schien als hätten die and'ren Inselvölker Wind davon bekomm'n was da vor sich ging un' hatten sich der Sache selbst angenomm', Ich glaub' die hatten doch welche von den alten magischen Zeichen von den'n die Seeviecher sagten, dass sie davor als einziges Angst hatt'n. Nich auszudenken was diese Kanaken sich alles zu schnappen trauen, wenn der Meeresboden 'ne Insel hervortreibt mit Ruinen, die älter sin' als die Sintflut. War'n andächtige Typen, denn sie ha'n nix stehen gelassen, weder auf der Hauptinsel noch auf der klein'n Vulkaninsel, bis auf die Ruinen, die zu groß war'n um sie abzureißen. An manchen Stellen lag'n kleine Steine verstreut --- wie Schutzzauber --- mit 'nem Symbol drauf, dass sie heute als Hakenkreuz nennen. War'n wohl die Zeichen der Großen Alten. Die Menschen war'n ausgelöscht un' es gab' keine Spur von irgendwelchem Goldzeugs un' keiner der anderen Kanaken wollte ein Wort über die Sache verlier'n. Ha'n sogar geleugnet, dass da jemals Leute auf der Insel gelebt hatt'n.
 
 \grqq
