Kapitel 3 bald fertig...

--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -50,4 +50,36 @@ Matt mochte dieses Treiben überhaupt nich' un' wollte, dass Obed sich von der I
 
 Un' dann, ungefähr Achtun'dreißig als ich sieben war --- fand Obed das ganze Inselvolk von einer Reise auf die nächste ausgelöscht. Schien als hätten die and'ren Inselvölker Wind davon bekomm'n was da vor sich ging un' hatten sich der Sache selbst angenomm', Ich glaub' die hatten doch welche von den alten magischen Zeichen von den'n die Seeviecher sagten, dass sie davor als einziges Angst hatt'n. Nich auszudenken was diese Kanaken sich alles zu schnappen trauen, wenn der Meeresboden 'ne Insel hervortreibt mit Ruinen, die älter sin' als die Sintflut. War'n andächtige Typen, denn sie ha'n nix stehen gelassen, weder auf der Hauptinsel noch auf der klein'n Vulkaninsel, bis auf die Ruinen, die zu groß war'n um sie abzureißen. An manchen Stellen lag'n kleine Steine verstreut --- wie Schutzzauber --- mit 'nem Symbol drauf, dass sie heute als Hakenkreuz nennen. War'n wohl die Zeichen der Großen Alten. Die Menschen war'n ausgelöscht un' es gab' keine Spur von irgendwelchem Goldzeugs un' keiner der anderen Kanaken wollte ein Wort über die Sache verlier'n. Ha'n sogar geleugnet, dass da jemals Leute auf der Insel gelebt hatt'n.
 
-\grqq
+Das traf Obed natürlich sehr hart, da auch seine sonst'gen Geschäfte schlecht gingen. Es traf auch ganz Innsmouth, denn in den Seefahrertagen fiel der Profit eines Kapitäns auch proportional seiner Crew zu. Die meisten Leute in der Stadt nahm'n die harten Zeiten wie die Schafe hin un' resigniert'n, aber sie waren in einer schlecht'n Situation, denn der Fischfang versiegte un' den Fabrik'n ging's auch nich' gut.
+
+Zu der Zeit begann Obed auf die Leute zu fluchen, weil sie dumme Schafe seien un' zum christlischen Himmel bet'n, der ihnen nix half. Er hat ihnen erzählt, er kenne Leute, die beteten zu Göttern, die das geben, was man wirklich braucht un' wenn genug Männer zu ihm stünden, könnt' er vielleicht gewisse Kräfte anrufen, die jede Menge Fisch un' ein'ges an Gold bringen wür'n. Auf je'n Fall wusst'n die, die auf der \textit{Sumatry Queen} gedient hatten un' die Insel kannt'n, was er meinte un' war'n nich sehr begierig, den Seeviechern von denen sie gehört hatt'n nahe zu komm'n aber die, die nich' wusst'n worum's ging wurd'n von dem, was Obed zu erzählen hatte beeinflusst un' fingen an, ihn zu frag'n, was er tun könne um sie auf den Pfad des Glaubens zu schicken, der ihnen Ergebnisse liefere.\grqq
+
+Hier kam der alte Mann ins Stocken, brummelte und verfiel in eine mürrische und besorgte Stille, schaute nevös über seine Schulter und drehte sich dann um um fasziniert das entfernte schwarze Riff anzustarren. Als ich ihn ansprach, antwortete er nicht, da wusste ich, dass ich ihn die Flasche leeren lassen müsste. Das irrsinnige Seemansgarn, das ich zu hören bekam, interessierte mich ungemein, denn ich wähnte darin eine Art kruder Allegorie, basierend auf der Fremdartigkeit von Innsmouth und ausgearbeitet durch eine Vorstellungskraft, die gleichzeitig kreativ und voll von Fetzen exotischer Legenden ist. Nicht für einen Moment glaubte ich, dass die Geschichte irgendeine haltbare Grundlage besaß, doch nichtsdestoweniger enthielt der Bericht einen Hauch wahren Schreckens. und wenn auch nur durch Verweise auf seltsame Juwelen, die klar der unheilvollen Tiara ähnelten, die ich in Newburyport gesehen hatte. Vielleicht waren diese Ornamente wirklich von irgendeiner absonderlichen Insel gekommen und möglicherweise waren die wilden Geschichten Lügen des verflossenen Obed selbst, statt dieses antiken Saufboldes.
+
+Ich übergab Zadok die Flasche und er leerte sie bis zum letzten Tropfen. Es war sonderbar, dass er soviel Whiskey vertragen konnte, denn nicht eine Spur von Schwere hatte seine Zunge überkommen in ihrer hohen, keuchenden Stimme. Er leckte die Öffnung der Flasche ab und steckte sie in seine Tasche, dann begann er zu nicken und leise in sich hinein zu flüstern. Ich beugte mich nahe zu ihm heran um irgendwelche verständlichen Worte, die er von sich geben möge zu erhaschen und ich glaubte, ein bitteres Lächeln hinter dem befleckten, buschigen Schnurrbart zu sehen. Ja --- er formte tatsächlich Worte und ich konnte einen Gutteil davon verstehen.
+
+\glqq Arme Matt --- Matt, er war immer dageg'n --- hat versucht die Leute auf seiner Seite zu organisier'n un' hatte lange Gespräche mit den Priestern --- alles zwecklos --- sie haben den Gemeindepfarrer aus der Stadt gejagt und der Kerl von den Methodisten hat aufgegeben --- den Baptistenpfarrer Resolved Babcock hab' ich nie wieder gesehen --- Bei Gottes Zorn! --- Ich war ein mächt'ger Lausebengel aber ich hab' gehört, was ich gehört hab' un' geseh'n was ich geseh'n hab' --- Dagon un' Astarte --- Belial un' Beelzebub --- das Goldene Kalb un' die Götzen von Kanaan un' die Philister --- Babylonische Abscheulichkeiten --- Mene, mene, tekel, upharsin ---\grqq
+
+Er stoppte wieder und vom Blick in seinen wässrig blauen Augen ausgehend befürchtete ich, dass er doch dem Stupor nahe war. Doch als ich sanft seine Schulter schüttelte, drehte er sich mir mit erstaunlicher Flinkheit zu und spuckte barsch einige weitere obskure Phrasen aus.
+
+\glqq Du glaubst mir nich', was? Hehehe --- dann erzähl mir mal, Junge, warum Käp'n Obed un' circa zwanzig and're Leute immer wieder mitten in der Nacht raus zum Devil Reef gerudert sind un' Gesänge angestimmt haben, so laut, dass man sie bei günst'gem Wind in der ganzen Stadt hören konnte? Erzähl mir warum? Un' erzähl mir, warum Obed immer schwere Dinge ins Wasser geworfen hat,  auf der anderen Seite vom Riff wo der Boden herabfällt wie eine Klippe, tiefer als man ausloten kann? Sag mir, was er mit dem merkwürdig geformten Dingsbums getan hat, das Walakea ihm gegeben hat? Na Junge? Un' was haben sie alle zum Maiabend gebrüllt un' wieder an Halloween danach? Un' warum die neuen Priester --- Kerle, die vorher Seeleute waren --- diese komischen Roben tragen un' sich mit diesen Golddingern schmücken, die Obed mitbrachte? Na?\grqq
+
+Die wässrig blauen Augen wirkten jetzt fast grausam und wahnsinnig und der dreckige, graue Bart sträubte sich wie elektrisiert. Der alte Zadok hatte wohl mitbekommen, wie ich zurücksank, denn er begann bösartig zu kichern.
+
+\glqq Hehehehe! Beginnst langsam, zu versteh'n, was? Vielleicht hätt'st Du gern in meiner Haut gesteckt zu der Zeit, als ich die Dinger nachts aus dem Wasser kommen sah, aus der Dachkuppel auf meinem Haus. Oh, ich kann dir sagen, die kleinen Biester haben große Ohren un' ich hab' nix von dem verpasst, was über Käp'n Obed un' die Leute draußen am Riff getuschelt wurd'. Hehehe! Was is' mit der Nacht, als ich meenes Vater's Fernrohr mit in die Kuppel genommen hatt' un' das Riff voll mit Gestalten gesehen hab', die von der fernen Seite ins tiefe Wasser getaucht un' nie hochgekommen sind... Wie würdest Du das finden, als kleiner Knirps oben in der Kuppel Gestalten zu beobachten, die nicht menschlich aussahen? .... Na? ....Hehehehe....\grqq
+
+Der alte Mann wurde hysterisch und ich begann vor unbenannter Furcht zu erzittern. Er legte eine knorrige Klaue auf meine Schulter und mir schien, dass ihr Zittern ganz und gar nicht von Heiterkeit geprägt war.
+
+\glqq Angenomm'n, eines Nachts siehste, wie was schweres jenseits des Roffs von Obeds Dory gehievt wird un' am nächsten Tag hörst Du, dass ein junger Kerl vermisst wird? Na? Hat jemals jemand nochmal die geringste Spur von Hiram Gilman gefunden? Haben sie? Un' Nick Pierce un' Luelly Waite un' Adoniram Southwick un' Henry Garrison? Na? Hehehehe... die Gestalten sprachen Zeichensprache mit ihren Händen.... die, die richtige Hände hatten...
+
+Also Junge, das war die Zeit als Obed langsam wieder auf die Beine kam. Die Leute sahen seine drei Töchter Golddinger tragen, die niemand vorher bei ihnen gesehen hatte und Rauch kam aus dem Schornstein der alten Raffinerie. And're Leute waren auch erfolgreich --- Fisch strömte in Scharen in den Hafen, fertig zum Fang un' weiß der Himmel wie groß die Ladungen waren, die wir nach Newburyport, Arkham und Boston rausschifften. Das war, als Obed die alte Eisenbahnzweigstrecke hierher bauen ließ. Ein paar Fischer aus Kingsport hatten vom Fischfang hier gehört un' kamen in ihren Schaluppen, aber sie gingen alle verschollen. Niemand hat sie je wieder geseh'n. Un' genau dann hatten unsere Leute den Esoterischen Orden des Dagon organisiert un' die Freimaurerhalle von der Golgota-Kommende dafür gekauft... hehehe! Matt Eliot war'n Freimaurer un' gegen den Verkauf, aber er verschwand genau zu der Zeit.
+
+Denk dran, ich sagte nicht, dass Obed die Dinge genauso haben wollte wie auf der Kanakeninsel. Ich glaub' nich', dass er zunächst Vermischung mit denen vorhatte, oder irgendwelche Jungen aufzuziehen, bis es sie zum Wasser zieht. Er wollte das Goldzeug un' war bereit, viel dafür zu zahlen, un' ich glaub' die and'ren war'n für eine Weile zufrieden...
+
+Bis Sechsun'vierzig hatte sich die Stadt ein wenig umgeschaut un' nachgedacht. Zu viele Leute vermisst --- zu viele wilde Predigten in der Sonntagsmesse --- zuviel Gerede über das Riff. Ich glaub' ich hab' selbst was dazu getan als ich Stadtrat Mowry erzählt hab', was ich von der Kuppel aus geseh'n hatte. Da gab's 'ne Gruppe, die eines Nacht's Obed's Leuten raus auf's Riff gefolgt is un' ich hörte Schüsse zwischen deren Dories. Am nächs'n Tag saßen Obed un' zweiundreißig and're im Gefängnis un' alles wunderte sich, was da im Gange war un' was für eine Anklage erhoben wer'n würd. Gott, wenn ir'ndwer nur vorausgeseh'n hätte... 'n paar Wochen später, als so lange nix mehr ins Meer geworf'n word'n war...\grqq
+
+Zadok zeigte Zeichen von Angst und Erschöpfung und ich ließ ihn eine Weile schweigen, obwohl ich besorgt auf meine Uhr starrte. Die Gezeiten hatten gewechselt und die Flut kam heran. Und das Geräuch der Wellen schien ihn zu erregen. Ich war froh über die Flut, den bei Hochwasser würde der Fischgestank vielleicht nicht so stark sein. Wieder strengte ich mich an um sein Geflüster zu verstehen.
+
+\glqq Jene furchtbare Nacht... ich hab' sie geseh'n... ich war oben in der Kuppel... Scharen von ihnen... Schwärme von ihnen... über's ganze Riff und schwammen den Hafen hoch in den Manuxet... Gott, was in den Straßen von Innsmouth in der Nacht passiert ist... sie ha'n an der Tür gerüttelt aber Pa wollte nicht aufmach'n... dann isser aus dem Küch'nfenster gestiegen mit seiner Muskete um Stadtrat Mowry zu find'n un' zu seh'n, was er tun könnt... Haufen von Toten und Sterbend'n... Schüsse un' Schreie... Geschrei im Ol'Square un' aufm Dorfplatz un' New Church Green... das Gefängnis überrannt... Proklamation... Verrat... haben's die Pest genannt als Menschen kamen un' rausfanden, dass die Hälfte unserer Leute fehlte... niemand über außer den'n, die sich Obed un' den Viechern anschlossen oder sonstwie Ruhe halten... hab' nie wieder was von mei'm Pa gehört...\grqq
+
+Der alte Mann keuchte und schwitzte übermäßig. Sein Griff um meine Schulter festigte sich.
