--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -83,3 +83,53 @@ Zadok zeigte Zeichen von Angst und Erschöpfung und ich ließ ihn eine Weile sch
 \glqq Jene furchtbare Nacht... ich hab' sie geseh'n... ich war oben in der Kuppel... Scharen von ihnen... Schwärme von ihnen... über's ganze Riff und schwammen den Hafen hoch in den Manuxet... Gott, was in den Straßen von Innsmouth in der Nacht passiert ist... sie ha'n an der Tür gerüttelt aber Pa wollte nicht aufmach'n... dann isser aus dem Küch'nfenster gestiegen mit seiner Muskete um Stadtrat Mowry zu find'n un' zu seh'n, was er tun könnt... Haufen von Toten und Sterbend'n... Schüsse un' Schreie... Geschrei im Ol'Square un' aufm Dorfplatz un' New Church Green... das Gefängnis überrannt... Proklamation... Verrat... haben's die Pest genannt als Menschen kamen un' rausfanden, dass die Hälfte unserer Leute fehlte... niemand über außer den'n, die sich Obed un' den Viechern anschlossen oder sonstwie Ruhe halten... hab' nie wieder was von mei'm Pa gehört...\grqq
 
 Der alte Mann keuchte und schwitzte übermäßig. Sein Griff um meine Schulter festigte sich.
+
+\glqq Am MOrgen klärte sich das alles --- aber 's gab Spur'n... Obed übernimmt irg'ndwie das Kommando un' sagt, dass die Dinge sich ändern wer'n... andere wer'n mit uns in der Messe beten und manche Häuser wür'n Gäste bewirten müssen... sie wollten sich mit uns kreuzen wie sie's mit den Kanaken getan haben un' er hatte nich' vor, sie aufzuhalten. So weit trieb es Obed.... wie'n Verrückter in der Sache. Er sagte sie hätt'n uns Fisch un' Schätze gebracht un' sollt'n dafür hab'n, wonach es ihnen verlangt...
+
+Äußerlich hatte sich nix verändert, nur sollt'n wir uns von Fremd'n fernhalten wenn wir wüssten, was gut für uns sei. Wir alle musst'n den Eid des Dagon ablegen un' später gab's 'n zweiten un' 'n dritten Eid, die ein paar von uns ablegten. Die, die im Speziellen halfen un' im Gegenzug spezielle Belohnungen --- Gold un' so weiter --- Keine Widerrede, denn da sin' Millionen von denen da unt'n. Die wollen eigentlich nicht hochsteigen un' die Menschheit auslöschen, aber wenn sie verraten un' dazu gezwungen würden, könnten sie in die Richtung einiges tun. Wir hatten nich die alten Zauber um sie abzuschneiden wie die Leut' in der Südsee un' die Kanaken hatten ihre Geheimnisse nie preis gegeb'n.
+
+Brachten wir genug Opfer un' wilden Krimskrams hervor un' gewährten Herberge in der Stadt wenn sie's wollt'n, ließen sie uns die meiste Zeit in Ruhe. Sollt'n uns nich mit Fremd'n abgegeb'n, damit die keine Geschicht'n nach außen trag'n --- allerdings, wurden sie so neugierig. Alles in der Mitte der Gläubig'n --- des Ordens von Davon --- un' die Kinder wür'n niemals sterb'n, sondern zurück zu Mutter Hydra un' Vater Dagon wo wir einst alle herkammen --- \textit{Ia! Ia! Cthulhu fhtagn! Ph’nglui mglw’nafh Cthulhu R’lyeh wgah-nagl fhtagn} ---
+\grqq
+
+Der alte Zadok verfiel komplett in Raserei und ich hielt meinen Atem an. Arme alte Seele --- zu welchen jämmerlichen Tiefen der Halluzination hatten Alkohol und sein Hass auf Verfall, Fremde und Krankheit um ihn herum dieses fruchtbare, phantasievolle Hirn gebracht! Er fing nun an zu stöhnen und Tränen rannen seine zerfurchten Wangen herunter in seinen Bart.
+
+\glqq Gott, was ich geseh'n hab' seit mei'm fünfzehnten Lebensjahr --- Mene, mene, tekel, upharsin! --- Die vermissten Leute un' die, die sich umgebracht hab'n --- die, die davon in Arkham oder Ipswich erzählt hab'n wur'n alle verrücjt genannt, genau so wie Du mich das jetzt nennst --- aber bei Gott, was ich geseh'n hab' --- Sie hätt'n mich schon lange umgebracht, weg'n all dem was ich weiß, aber ich hab' den ersten un' den zweiten Eid des Dagon bei Obed abgelegt un' bin geschützt, bis ein Schwurgericht aus denen beweist, dass ich wissentlich un' vorsätzlich was erzähl hab'... aber ich würde nie den dritten Eid ablegen --- ich würde lieber sterben als den abzuleg'n ---
+
+Es wurde schlimmer zur Zeit des Bürgerkriegs, als die Kinder, die seit Sechsun'vierzig gebor'n worden war'n aufwuchsen --- ein'ge von ihnen zumindest. Ich hatte Angst --- hab' nie mehr gebetet seit der furchtbaren Nacht un' niemals einen von --- den'n --- aus der Nähe geseh'n in meinem ganzen Leben. Das heißt, zumindes' nie 'n Vollblut. Ich bin in den Krieg gezogen un' wenn ich den Mut oder Verstand gehabt hätte, wär' ich nie wieder gekomm', sondern hätte mich weit weg von hier niedergelassen. Aber Leute shrieben mir, es wär nich' so schlimm. Das, denk ich, war weil Rekrutierungsleute von der Regierung seit Dreiun'sechzig in der Stadt war'n. Nach'm Krieg war's wieder genau so schlimm wie vorher. Die Einwohnerzahl nahm ab --- Fabriken un' Läden schloss'n --- die Schifffahrt ging ein un' der Hafen verstopfte --- die Eisenbahn wurd' aufgegeb'n --- aber die... die hört'n nie auf, den Fluss auf und abzuschwimmen von dem verfluchten Teufelsriff aus --- un' mehr un' mehr Dachfenster wurd'n verbarrikadiert un' mehr un mehr Geräusche war'n in Häusern zu hör'n in denen eigentlich keiner wohn'n sollte...
+
+Die Leute drauß'n hab'n ihre Geschichten über uns --- ich denke, Du hast 'ne Menge davon gehört, nach deinen Fragen zu urteil'n --- Geschichten über Dinge, die sie hier un' da geseh'n hab'n un' über den seltsam'n Schmuck der immer noch von ir'ndwo her kommt un' von dem doch nich' alles eingeschmolz'n wird --- aber nix wird je konkret. Niemand will nix glaub'n. Sie sagn' das Goldzeugs sei Piratenbeute un' alle Innsmouther hab'n fremdes Blut, sin' missgestimmt oder ir'ndwas. Außerdem verscheuchen die, die hier leb'n so viele Fremde wie sie nur könn' un' bestärken den Rest darin, nich' sehr neugierig zu wer'n, ganz speziell nachts. Die Viecher mochten keine Tiere --- Pferde scheut'n, un' die Maultiere --- aber als Autos aufkamen, hat sich das gelegt.
+
+Sechsun'vierzig nahm Käp'n Obed eine zweite Frau, die niemand in der Stadt je geseh'n hat --- manche sag'n er wollte nich' aber wurde von den', die er geruf'n hatte gezwung'n --- hatte drei Kinder mit ihr --- zwei sind jung verschwund'n aber ein Mäd'l wurd' zur Ausbildung nach Europa geschickt. Obed hat sie schließlich durch 'n Trick mit 'nem Kerl aus Arkham verheiratet, der nix davon ahnte. Aber jetz' hat niemand da draußen mehr mit den Innsmouthern zu tun. Barnabas Marsh, der die Raffinerie jetz' betreibt is' Obeds Enkel von seiner ersten Frau --- Sohn von Onesiphorus, seinem ältesten Sohn aber seine Mutter war auch eine von den' un' nie draußen geseh'n word'n.
+
+Mittlerweile hat sich Barnabas verändert. Kann die Aug'n nich' mehr schließen un' is ganz aus der Form. Es heißt, er trägt immer noch Kleider aber ihn wird's bald zum Wasser zieh'n. Vielleicht hat er's schon versucht --- sie tauchen manchmal für'n Weilchen darunter bevor sie endgültig verschwind'n. Wurde seit fast zehn Jahr'n nich' in der Öffentlichkeit geseh'n. Weiß nich, wie's seiner armen Frau geht --- sie kommt aus Ipswich un' sie haben Barnabas fast gelyncht als er ihr vor ungefähr fünfzig Jahr'n den Hof gemacht hat. Obed is' Achtun'siebzig gestorben un' die Generation danach is nun weg --- die Kinder der erst'n Frau tot un' der Rest... das weiß nur Gott...
+\grqq
+
+ Das Rauschen der herannahenden Flut war jetzt unglaublich eindringlich und nach und nach schien dies die Laune des alten Mannes von rührseliger Traurigkeit zu aufmerksamer Furcht zu verändern. Er pausierte dann und wann um erneut nervöse Blicke über seine Schulter oder raus zum Riff zu werfen und trotz der Absurdität seiner Erzählung begann ich, seine ungewisse Besorgnis zu teilen. Zadok wurde nun schriller und schien seinen Mut durch einen lauteren Ton zu sammeln.
+
+\glqq Hey Du, warum sagst Du nix? Wie würd's dir gefall'n in so einer Stadt zu leben in der alles verrottet un' stirbt un' in Bretterverschlägen Monster kriechen un' blöken un' bellen un in dunklen Kellern un' Dachbäden rumhüpf'n wo man nur hinsieht? Na? Wie würd's dir gefall'n Nacht um Nacht das Heulen aus den Kirchen un der Ordenshalle von Dagon un' zu wiss'n, was da mitheult? Würd'st Du gern hören, was vorm ersten Mai un' Allerheil'gen von dem schrecklichen Riff heraufsteigt? Na? Denkst, der alte Mann iss verrückt, was? Nun Junge, \textit{lass mich dir sag'n, das iss nich' das schlimmste!}\grqq
+
+Zadok schrie nun förmlich und die irre Raserei in seiner Stimme verstörte mich mehr als mir lieb war.
+
+\glqq Verflucht, sitz nicht da und starr mich mit diesen Augen an --- Ich sag dir, Obed Marsh is' in der Hölle un' da muss er auch bleiben! Hehehe... in der Hölle, sag ich! Kann mich nich' kriegen --- Ich hab' nix gemacht un' niemandem was erzählt ---
+
+Oh, Du junger Bursche? Nun, selbst wenn ich bis jetzt noch niemand'm was erzählt hab', werd' ich das jetz'! Sitz du nur still un' hör mir zu, Junge --- das hier hab' ich noch niemand'm erzählt... Ich sag, ich war nicht neugierig nach jener Nacht --- aber ich hab' trotzdem Sach'n rausgefund'n!
+
+Willste den wahren Schrecken erfahren, was? Also, das is' so --- es is' nich', was die Fischteufel getan hab'n, sondern was sie tun wer'n! Die bring'n Dinge von da woher sie komm' in die  Stadt --- hab'n das seit Jahren getan un' lassen jetzt erst nach. Die Häuser nördlich vom Fluss, zwisch'n Water un' Main Street sind voll von den Teufeln un' dem, was sie hochgebracht hab'n un' wenn sie fertig sin'... Ich sag dir, wenn sie fertig sin'... schonmal was von 'nem \textit{Shoggoth} gehört?...
+
+Hey, hörst Du mich? Ich sag dir, ich weiß was die Dinger sin' --- ich hab' sie eines Nachts gesehen als... EEEH --- AAHHHHH! YAAAAAHH...
+\grqq
+
+Die abscheuliche Plötzlichkeit und unmenschliche Schrecklichkeit des Schreies des alten Mannes ließ mich fast ohnmächtig werden. Seine Augen, an mir vorbei auf die übelriechende See starrend, schienen förmlich aus seinem Kopf zu springen während sein Gesicht sich zu einer Maske der Furcht, einer griechischen Tragödie werd verzog. Seine knochige Klaue grub sich in meine Schulter und er bewegte sich nicht als ich einen Kopfdrehte um zu sehen, was er erblickt hatte.
+
+Da war für mich nichts zu sehen. Nur die herankommende Flut, die vielleicht ein Kräuseln näher kam als die entlegenen Brecher. Doch Zadok schüttelte mich und ich drehte mich zurück um das vor Furcht erstarte gesicht in ein Chaos aus zuckenden Augenbrauen und murmelnden, zahnlosen Kiefern. Bald kehrteseine Stimme zurück --- jedoch als ein wimmerndes Flüstern.
+
+\glqq Verschwinde von hier! Verschwinde von hier! Sie hab'n uns geseh'n --- Verschwinde, wenn dir dein Leben lieb ist! Warte auf nix und niemanden --- sie wissen jetzt Bescheid --- Lauf was Dz jabbst --- schnell raus aus dieser Stadt ---
+\grqq
+
+Eine weitere schwere Welle brach sich am losen Mauerwerk der ehemaligen Werft und wandelte das Flüstern des wahnsinnigen Alten in einen weiteren unmenschlichen und markerschütternden Schrei.
+
+\glqq EYAAAHHHH! ... YAAAAAAAHH! ...\grqq
+
+Bevor ich meinen zerstreuten Verstand wieder zusammen bekam, hatte er seinen Griff an meiner Schulter gelöst und rannte wild landeinwärts zur Straße, um die zerstörte Lagerhauswand.
+
+Ich blickte zurück auf's Meer. Dort war nichts. Und als ich die Water Street erreichte und an dort entlang nach Norden schaute, war dort keine Spur von Zadok Allen.
