Schrift überall auf Liinux Libertine geändert. Typo-Fail im Lizenzhinweis etwas abgemildert. README um XeTeX- und Libertine-Hinweis erweitert.

--- a/Dagon/Dagon.tex
+++ b/Dagon/Dagon.tex
@@ -4,8 +4,7 @@
 \usepackage[cm-default]{fontspec}
 \usepackage{xunicode}
 \usepackage{xltxtra}
-\setromanfont[Mapping=tex-text]{Linux Libertine O} %roman font
-
+\setromanfont[Mapping=tex-text]{Linux Libertine O}
 
 \begin{document}
 \title{Dagon}
@@ -15,7 +14,7 @@
 \maketitle
 
 \textit{Dieser Text steht unter einer Creative Commons CC-BY-SA 3.0 Lizenz
-(siehe\\ creativecommons.org/licenses/by-sa/3.0). Das Englische Original von H.P. Lovecraft ist Teil der Public Domain. Die dieser Übersetzung zugrunde liegende Originalfassung kann unter hplovecraft.com nachgelesen werden.}
+(siehe Lizenztext unter creativecommons.org/licenses/by-sa/3.0). Das Englische Original von H.P. Lovecraft ist Teil der Public Domain. Die dieser Übersetzung zugrunde liegende Originalfassung kann unter hplovecraft.com nachgelesen werden.}
 
 \vspace{12pt}
 
