--- a/The Temple/Temple.tex
+++ b/The Temple/Temple.tex
@@ -1,8 +1,10 @@
 \documentclass[a4paper]{memoir}
 \usepackage[ngerman]{babel}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
 \usepackage{textcomp}
+\usepackage[cm-default]{fontspec}
+\usepackage{xunicode}
+\usepackage{xltxtra}
+\setromanfont[Mapping=tex-text]{Linux Libertine O}
 
 \begin{document}
 \title{Der Tempel}
@@ -10,8 +12,8 @@
 		Sebastian Jackel (Übersetzung)}
 \date{}
 \maketitle
-\textit{Dieser Text steht unter einer Creative Commons CC-BY-SA Lizenz
-(siehe\\ creativecommons.org/licenses/by-sa/3.0/). Das Englische Original von H.P. Lovecraft ist Teil der Public Domain. Die dieser Übersetzung zugrunde liegende Originalfassung kann unter hplovecraft.com nachgelesen werden.}
+\textit{Dieser Text steht unter einer Creative Commons CC-BY-SA 3.0 Lizenz
+(siehe Lizenztext unter creativecommons.org/licenses/by-sa/3.0/). Das Englische Original von H.P. Lovecraft ist Teil der Public Domain. Die dieser Übersetzung zugrunde liegende Originalfassung kann unter hplovecraft.com nachgelesen werden.}
 
 \vspace{12pt}
 
