--- a/The Shadow over Innsmouth/Innsmouth.tex
+++ b/The Shadow over Innsmouth/Innsmouth.tex
@@ -1,8 +1,10 @@
 \documentclass[a4paper]{memoir}
 \usepackage[ngerman]{babel}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
 \usepackage{textcomp}
+\usepackage[cm-default]{fontspec}
+\usepackage{xunicode}
+\usepackage{xltxtra}
+\setromanfont[Mapping=tex-text]{Linux Libertine O}
 
 \begin{document}
 \title{Der Schatten über Innsmouth}
