Innsmouth Kapitel 4, weitere Abschnitte

--- a/The Shadow over Innsmouth/chapter4.tex
+++ b/The Shadow over Innsmouth/chapter4.tex
@@ -9,3 +9,17 @@ Die Karte des Jungen aus dem Lebensmittelgeschäft studierend und eine Route suc
 Der Bus rasselte ziemlich früh, um kurz vor 8 mit drei Passagieren heran und ein finster schauender Kerl auf dem Bürgersteig murmelte ein paar undeutliche Worte zum Fahrer. Sargent warf einen Postsack und einen Stapel Zeitungen heraus und betrat das Hotel während die Passagiere --- die selben Männer, die ich diesen Morgen in Newburyport hatte ankommen sehen --- schlurften zum Gehsteig und wechselten einige leise, gutturale Worte mit einem Penner in einer Sprache von der ich hätte schwören können, dass es kein Englisch war. Ich bestieg den leeren Bus und nahm den selben Platz, auf dem ich vorhin gesessen hatte, doch ich hatte mich kaum niedergelassen als Sargent wieder erschien und in einer kehligen Stimme von besonderer Widerwärtigkeit zu grummeln begann.
 
 Ich hatte, so schien es, sehr großes Pech. Es gab ein Problem mit dem Motor, trotz der gutgemachten Zeit von Newburyport aus und der Bus könne die Reise nach Arkham nicht vollenden. Nein, er könne weder bis Einbruch der Nacht repariert werden, noch gab es irgendeinen anderes Transportmittel aus Innsmouth heraus, weder nach Arkham, noch sonstwohin. Sargent entschuldigte sich, doch ich würde im Gilham einkehren müssen. Der Empfangschef dort würde mir wahrscheinlich einen guten Preis machen aber es gab keine andere Möglichkeit. Fast verwirrt durch dieses plötzliche Hindernis und den Einbruch der Dunkelheit in dieser verrottenden und halb unbeleuchteten Stadt fürwahr fürchtend, verließ ich den Bus und betrat wieder die Hotellobby, wo der mürrische, sonderbar aussehende Angestellte der Nachtschicht mir sagte, ich könne Zimmer 428 unter dem Dachgeschoss haben --- groß, doch ohne fließend Wasser --- für einen Dollar.
+
+Trotz allem, was ich in Newburyport über dieses Hotel gehört hatte, trug ich mich ins Gästebuch ein, zahlte meinen Dollar, ließ den Angestellten meine Tasche nehmen und folgte dem mürrischen Bediensteten über drei knarrende Treppen an staubigen Korridoren vorbei, die jeglichen Lebens entbehrten. Mein Zimmer, ein trostloses hinteres mit zwei Fenstern und nackten, einfachen Möbeln überblickte einen schmutzigen, ansonsten mit niedrigen, öden Ziegelmauern umgebenen Hof und und gewährte einen Ausblick auf baufällige, sich nach Westen erstreckende Dächer mit sumpfiger Landschaft jenseits davon. Am Ende des Korridors gab es ein Bad --- ein entmutigendes Relikt mit einer uralten Marmorschüssel, Zinnbadewanne, einer schwachen elektrischen Leuchte und modriger Holzverkleidung um alle Armaturen.
+
+Im verbleibenden Tageslicht stieg ich herab zum Platz und schaute mich nach irgendeiner Form von Abendessen um, dabei die befremdlichen Blicke bemerkend, die ich von den unheilsamen Gammlern erhielt. Da der Lebensmittelladen geschlossen hatte, war ich gezwungen das Restaurant aufzusuchen, welches ich vorher gemieden hatte. Eingebeugter, schmalköpfiger Herr mit glotzenden, starren Augen und einem plattnasigen Weib mit unglaublich ungeschickten, plumpen Händen taten dort ihren Dienst. Die Bedienung lief über einen Schalter und es erleichterte mich, dass das meiste aus Dosen und Päckchen serviert wurde. Eine Schale Gemüsesuppe mit ein paar Crackern genügte mir und ich begab mich bald zurück in mein trostloses Zimmer im Gilman, unterwegs eine Abendzeitung und ein abgegriffenes Magazin von einem klapprigen Zeitungsstand bei dem grimmig blickenden Mann am Schalter mitnehmend.
+
+Als die Dämmerung hereinbrach, schaltete ich die schwache Glühbirne über dem billigen Eisengestellbett ein und versuchte, meine begonnene Lektüre fortzusetzen so gut ich konnte. Ich hielt es für ratsam, meinen Verstand vollständig beschäftigt zu halten, da ich nicht über die Abnormalitäten dieses uralten, von Zerstörung überschatteten Städtchens nachdenken wollte, solang ich mich noch innerhalb seiner Grenzen befand. Die irrsinnigen Geschichten, die ich von dem alten Trunkenbold gehört hatte, versprachen keine sonderlich sanften Träume und ich fühlte, dass ich das Bild seiner wilden, wässrigen Augen soweit wie möglich aus meiner Fantasie halten sollte.
+
+Ich durfte auch nicht daran denken, was der Fabrikinspektor dem Fahrkartenverkäufer in Newburyport über das Gilman House und die Stimmen seiner nächtlichen Bewohner erzählt hatte --- nicht daran und auch nicht an das Gesicht unter der Tiara in dem dunklen Kircheneingang. Ein Gesicht, dessen Schrecken mein Bewusstsein nicht erfassen konnte. Es wäre wohl leichter gewesen, meine Gedanken von diesen verstörenden Themen abzulenken, wenn der Raum nicht so schauerlich modrig gewesen wäre. Unter den gegebenen Umständen verschmolz der todbringende Muff auf abscheuliche Weise mit dem allgemeinen Fischgestank der Stadt und lenkte die Fantasie beharrlich auf Tod und Verderbnis.
+
+Eine weitere Sache, die mich störte war die Abwesenheit eines Riegels an der Tür meines Zimmers. Es hatte sich dort einer befunden, wie Spuren klar zeigten, doch gab es Anzeichen, dass er kürzlich entfernt wurde. Zweifellos war er kaputt gegangen wie so viele andere Dinge in diesem heruntergekommenen Gebäude. In meiner Nervosität schaute ich mich um und entdeckte einen Riegel an der Kleiderpresse, der seinen Markierungen nach von der gleichen Größe wie jener, der an der Tür angebracht gewesen war. Um mir etwas Erleichterung von meiner allgemeinen Anspannung zu verschaffen, beschäftigte ich mich damit, dieses Teil mit Hilfe eines Multifunktionswerkzeuges an meinem Schlüsselbund, das einen Schraubenzieher beinhaltete, zu dem freien Platz an der Tür zu versetzen. Der Riegel passte perfekt und ich war ein wenig erleichtert, als ich sicher war, dass ich ihn feste vorschieben konnte, wenn ich zu Bett ging. Nicht, dass ich wirkliche Besorgnis hegte, ihn zu benötigen, doch war mir in einer solchen Umgebung jedes Symbol der Sicherheit willkommen. Die beiden Türen zu den Nebenzimmern hatten angemessene Riegel, welche ich vorschob.
+
+Ich zog mich nicht aus, sondern entschied mich, zu lesen bis ich müde war und mich dann hinzulegen und lediglich Mantel, Kragen und Schuhe abzulegen. Ich nahm eine Taschenlampe aus meiner Reisetasche und steckte sie in meine Hose um die Uhr lesen zu können, falls ich später im Dunkeln aufwachen sollte. Schläfrigkeit überkam mich jedoch nicht und als ich aufhörte, meine Gedanken zu zergliedern, fiel mir zu meiner Beunruhigung auf, dass ich in Wirklichkeit unbewusst nach etwas lauschte --- etwas, vor dem ich mich fürchtete, doch es nicht benennen konnte. Die Geschichte des Inspektors musste schlimmer auf meine Vorstellungskraft eingewirkt haben als ich erwartet hatte. Ich versuchte wieder zu lesen, doch kam damit nicht voran.
+
+Nach einer Weile schien es mir als hörte ich die Treppen und Korridore wiederholt knarren als wie durch Schritte und ich fragte mich, ob die anderen Räume begannen, sich zu füllen. Da waren jedoch keine Stimmen und es war mir als hätte dieses Knarren etwas verstohlenes. Mir gefiel dies nicht und ich erörterte ob ich es überhaupt versuchen sollte, zu schlafen. Diese Stadt hatte einige merkwürdige Einwohner und es sind zweifellos schon ein paar Menschen verschwunden. War dies eines von jenen Gasthäusern wo Reisende für ihr Geld umgebracht wurden? Sicherlich barg ich an mir nicht den Anschein übermäßigen Reichtums. Oder waren die Bürger so verärgert über neugierige Besucher? Hatten meine ersichtlichen Besichtigungen mit ihren häufigen Konsultationen meiner Karte unvorteilhaftes Aufsehen erregt? Mir fiel auf, dass ich in einem hochnervösen Zustand sein musste wenn durch ein zufälliges Knarzen solche Spekulationen in mir hervorrief --- doch ich bereute nichtsdestoweniger, dass ich nicht bewaffnet war.
