Warnung zum Innsmouth-Header hinzugefügt

--- a/The Shadow over Innsmouth/Innsmouth.tex
+++ b/The Shadow over Innsmouth/Innsmouth.tex
@@ -7,11 +7,13 @@
 \setromanfont[Mapping=tex-text]{Linux Libertine O}
 
 \begin{document}
-\title{Der Schatten über Innsmouth}
+\title{Der Schatten über Innsmouth -- WORK IN PROGRESS!!!}
 \author{H.P. Lovecraft\\
 		Sebastian Jackel (Übersetzung)}
 \date{}
 \maketitle
+
+\textit{Diese Übersetzung ist noch unvollständig. 3 von 5 Kapiteln des Originals sind roh übersetzt, d.h. potentiell mit Übersetzungs- und Satzfehlern übersät. Außerdem fehlt noch jegliche Rechtschreibkorrektur. Das 4. Kapitel ist zu diesem Zeitpunkt zur Hälfte übersetzt und Kapitel 5 fehlt noch vollständig!}
 
 \include{chapter1}
 \include{chapter2}
